# Kairn

./: .env.example  .gitignore  LICENSE  Readme.md  docker-compose.yml  globals.css  package-lock.json  package.json
backend/: Dockerfile  alembic.ini  prestart.sh  pyproject.toml  requirements.txt  wait-for-postgres.sh
backend/alembic/: env.py
backend/alembic/versions/: 6e33b127c607_create_exhaustive_profile_model.py  725c9f7abdcf_create_users_table.py
backend/app/: main.py
backend/app/api/v1/: api.py  deps.py
backend/app/api/v1/endpoints/: profiles.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: base_class.py  session.py
backend/app/models/: __init__.py  profile.py  user.py
backend/app/schemas/: __init__.py  profile.py  user.py
backend/app/services/: __init__.py  profile_service.py  user_service.py
docs/: database_blueprint.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  button.tsx  chart.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts
jules-scratch/verification/: verify_login_page.py
